Fixed CSS styling on mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -450,4 +450,24 @@ a:hover {
     transition: background-color 0.2s ease-in-out;
     transition: box-shadow 0.3s ease-in-out;
     }
+
+    .container-fluid{
+        margin-left: 5% !important;
+    }
   }
+  @media (max-width: 768px) {
+    .show {
+    background-color: rgba(255,255,255, 0.5);
+    box-shadow: 0 0 4px grey;
+    transition: background-color 0.2s ease-in-out;
+    transition: box-shadow 0.3s ease-in-out;
+    }
+
+    .container-fluid{
+        margin-left: 5% !important;
+    }
+    .filters{
+        margin-bottom: 10px;
+    }
+  }
+  
